--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,13 @@
 #varieties{
     background-image: url("../images/the-best-pizza-in-town.jpg");
     color: white;
-    padding-top: 150px;
+    padding-top: 200px;
     
+}
+#contact-us{
+    text-align:center;
+    background-color:olivedrab
+}
+#order{
+    background-image: url(../images/pizza-roma-cafe-corner.jpg2);
 }
