--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,8 @@
 #order{
     background-image: url(../images/pizza-roma-cafe-corner.jpg2);
 }
+.bar{
+    position: fixed;
+    text-align: center;
+    background-color: olivedrab;
+}
