add styles and images

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 #Home{
-    background-image: url("../images/the-best-pizza-in-town.jpg");
+    background-image: url("../images/homemade-pizza-tomatoes-mozzarella-basil-top-view-wit-copy-space-dark-stone-table-92904612p.jpg");
     color:white;
     padding-top: 100px;
 }
 #varieties{
-    background-image: url("../images/the-best-pizza-in-town.jpg");
+    background-image: url("../images/food-ingredients-spices-cooking-delicious-italian-pizza-mushrooms-tomatoes-cheese-onion-oil-pepper-salt-basil-grater-olive-114683943pp.jpg");
     color: white;
     padding-top: 200px;
     
@@ -14,7 +14,7 @@
     background-color:olivedrab
 }
 #order{
-    background-image: url(../images/pizza-roma-cafe-corner.jpg2);
+    background-image: url(../images/download\ \(2\).jpeg3);
 }
 .bar{
     position: fixed;
