--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,13 @@
 }
 #varieties{
     background-image: url("../images/food-ingredients-spices-cooking-delicious-italian-pizza-mushrooms-tomatoes-cheese-onion-oil-pepper-salt-basil-grater-olive-114683943pp.jpg");
-    /* color: white; */
+    color:whitesmoke;
     padding-top: 250px;
     text-align: center;
     font-weight:bolder;
     
 }
-#contact-us{
+ #contact-us{
     text-align:center;
     background-color:olivedrab
 }
